--- a/kali_metasploitable/Vagrantfile
+++ b/kali_metasploitable/Vagrantfile
@@ -1,4 +1,7 @@
 Vagrant.configure("2") do |config|
+    config.ssh.username = 'vagrant'
+    config.ssh.password = 'vagrant'
+    
     config.vm.define "kali" do |kali|
       kali.vm.box = "kalilinux/rolling"
       kali.vm.network "public_network", bridge: "Realtek 8822CE Wireless LAN 802.11ac PCI-E NIC"
